# parliament-interests-mcp

./: .gitignore  README.md  claude_desktop_config.json  claude_desktop_config.json.example  pyproject.toml
companies-server/: .env.example  README.md  pyproject.toml
companies-server/src/: server.py
companies-server/src/api/: client.py
companies-server/src/api/models/: __init__.py  base.py  common.py  search.py
parliament-server/: README.md  pyproject.toml
parliament-server/docs/: vector-store-population.md
parliament-server/src/: rag.py  server.py
parliament-server/src/api/: client.py
parliament-server/src/api/models/: base.py  debates.py  members.py
parliament-server/tests/: test_api_client.py  test_mcp_server.py
src/: __init__.py  main.py  server.py
src/api/: client.py  rag.py
src/api/models/: __init__.py  base.py  debates.py  interests.py  members.py
src/parliament/: rag.py
src/parliament/api/: client.py
src/parliament/api/models/: interests.py
tests/: __init__.py
